Consolidate Geometry project path with its name

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 Shapes/.vs/*
 Shapes/src/GeometryConsoleExample/bin/*
 Shapes/src/GeometryConsoleExample/obj/*
-Shapes/src/Shapes/bin/*
-Shapes/src/Shapes/obj/*
+Shapes/src/Geometry/bin/*
+Shapes/src/Geometry/obj/*
 Shapes/tests/ShapesTest/bin/*
 Shapes/tests/ShapesTest/obj/*
