Fix project paths and message mistake

--- a/Shapes/src/GeometryConsoleExample/GeometryConsoleExample.csproj
+++ b/Shapes/src/GeometryConsoleExample/GeometryConsoleExample.csproj
@@ -7,6 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shapes\Geometry.csproj" />
+    <ProjectReference Include="..\Geometry\Geometry.csproj" />
   </ItemGroup>
 </Project>
