--- a/Shapes/tests/ShapesTest/GeometryTest.csproj
+++ b/Shapes/tests/ShapesTest/GeometryTest.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Shapes\Geometry.csproj" />
+    <ProjectReference Include="..\..\src\Geometry\Geometry.csproj" />
   </ItemGroup>
 
 </Project>
